Payment Info pg done

--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
-  <body class="text-center ">
+  <body>
     <h1  class="text-center">Contact Us</h1>
     <form action="https://us-central1-steam-center-app-dev.cloudfunctions.net/formToEmail "
     method="post" class="px-3 mb-3">
@@ -55,7 +55,8 @@
         </div>
       </div>
       <br>
-      <div class="col-12 p2 wow animate__fadeInUp">
+      
+      <div class="col-12 wow animate__fadeInUp ">
         <button class="btn btn-primary" type="submit">Submit form</button>
         <button class="btn btn-secondary" type="reset">Reset form</button>
       </div>
