--- a/Team page.html
+++ b/Team page.html
@@ -52,9 +52,9 @@
     <div class="col col-12 col-6 col-lg-3">
 
       <div class="card h-100">
-        <img src="images/Logan.JPG" class="card-img-top" alt="...">
+        <img src="images/Logan.JPG" class="card-img-top" alt="logan">
         <div class="card-body">
-          <h5 class="card-title">logan Vergara(CEO)</h5>
+          <h5 class="card-title">Logan Vergara (CEO)</h5>
           <p class="card-text">I am a 11th grader or junior in high school, going to school at the Brooklyn Steam
             Center, located in the Brooklyn Navy Yard in downtown Brooklyn. I enojy various activites such as sports and
             video games. I am currently expanding my expertiese in Fullstack Development and am now HTML and CSS
@@ -68,9 +68,9 @@
     <div class="col col-12 col-6 col-lg-3">
 
       <div class="card">
-        <img src="images/santi.jpg" class="card-img-top" alt="...">
+        <img src="images/santi.jpg" class="card-img-top" alt="santi">
         <div class="card-body">
-          <h5 class="card-title text-center">santiago cardenas (COO)</h5>
+          <h5 class="card-title text-center">Santiago Cardenas (COO)</h5>
           <p class="card-text overflow-scroll" style="height: 131px;">Hi my name is santiago and i like to cook and
             clean and work my homework (wink Wink😉)
             and im very social i would talk to anyone in this class and i wont get mad because thats how nice i am.
@@ -90,9 +90,9 @@
 
     <div class="col col-12 col-6 col-lg-3">
       <div class="card">
-        <img src="images/arian.png" class="card-img-top" alt="...">
+        <img src="images/arian.png" class="card-img-top" alt="arion">
         <div class="card-body">
-          <h5 class="card-title text-center">arion john(Administrative Assistant)</h5>
+          <h5 class="card-title text-center">Arion John (Administrative Assistant)</h5>
           <p class="card-text overflow-scroll" style="height: 100px;">Hello, my name is Arion John I attend Medgar Evers
             Preparatory School and the Brooklyn
             STEAM Center. I am 16 years old and some of my interests are Track and Field, playing video games and
@@ -104,9 +104,9 @@
 
     <div class="col col-12 col-6 col-lg-3">
       <div class="card">
-        <img src="images/jayden.png" class="card-img-top" alt="...">
+        <img src="images/jayden.png" class="card-img-top" alt="Jayden">
         <div class="card-body">
-          <h5 class="card-title text-center"> jayden baird (?)</h5>
+          <h5 class="card-title text-center"> Jayden Baird (?)</h5>
           <p class="card-text">I am a student at George Westinghouse HighSchool and I am going to a new ingenious
             afterschool program called the Brooklyn Steam where where we learn about real life things like coding,
             construction, cooking, and more.</p>
