added nav to everything

--- a/Team page.html
+++ b/Team page.html
@@ -16,30 +16,46 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <img class="sm" src="logo.png" height="50" />
-      <a class="navbar-brand" href="#">ECHO TRADES</a>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid justify-content-end ">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+      </a>
+      <div class="flex-grow-1"></div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+      <div class="navbar-collapse collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link text-white "  href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link disabled" href="trading.html">Trading</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">team page</a>
+            <a class="nav-link disabled" href="pricing.html">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="Team page.html"> Team Members </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="echosubscription.html"> Subscription</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="Contact_Page.html"> Contact</a>
           </li>
         </ul>
+      </div>
+      <a class="btn btn-outline-primary" aria-current="page" href="sign-up.html">Sign Up</a>
+
+      <div>
+        <a class="btn " aria-current="page" href="Payment_Info.html"><img src="images/cart-148964_1280.png" alt="Logo"
+            width="30" class="d-inline-block align-text-top"></a>
       </div>
     </div>
 
@@ -54,7 +70,7 @@
       <div class="card h-100">
         <img src="images/Logan.JPG" class="card-img-top" alt="logan">
         <div class="card-body">
-          <h5 class="card-title">Logan Vergara (CEO)</h5>
+          <h5 class="card-title">Logan Vergara (Chief Executive Officer)</h5>
           <p class="card-text">I am a 11th grader or junior in high school, going to school at the Brooklyn Steam
             Center, located in the Brooklyn Navy Yard in downtown Brooklyn. I enojy various activites such as sports and
             video games. I am currently expanding my expertiese in Fullstack Development and am now HTML and CSS
@@ -70,7 +86,7 @@
       <div class="card">
         <img src="images/santi.jpg" class="card-img-top" alt="santi">
         <div class="card-body">
-          <h5 class="card-title text-center">Santiago Cardenas (COO)</h5>
+          <h5 class="card-title text-center">Santiago Cardenas (Chief Operating Officer)</h5>
           <p class="card-text overflow-scroll" style="height: 131px;">Hi my name is santiago and i like to cook and
             clean and work my homework (wink Wink😉)
             and im very social i would talk to anyone in this class and i wont get mad because thats how nice i am.
@@ -92,7 +108,7 @@
       <div class="card">
         <img src="images/arian.png" class="card-img-top" alt="arion">
         <div class="card-body">
-          <h5 class="card-title text-center">Arion John (Administrative Assistant)</h5>
+          <h5 class="card-title text-center">Arion John (Chief Assistant Officer)</h5>
           <p class="card-text overflow-scroll" style="height: 100px;">Hello, my name is Arion John I attend Medgar Evers
             Preparatory School and the Brooklyn
             STEAM Center. I am 16 years old and some of my interests are Track and Field, playing video games and
@@ -106,8 +122,8 @@
       <div class="card">
         <img src="images/jayden.png" class="card-img-top" alt="Jayden">
         <div class="card-body">
-          <h5 class="card-title text-center"> Jayden Baird (?)</h5>
-          <p class="card-text">I am a student at George Westinghouse HighSchool and I am going to a new ingenious
+          <h5 class="card-title text-center"> Jayden Baird (Chief Designer Officer)</h5>
+          <p class="card-text">Hi, I am a student at George Westinghouse HighSchool and I am going to a new ingenious
             afterschool program called the Brooklyn Steam where where we learn about real life things like coding,
             construction, cooking, and more.</p>
 
