--- a/Payment_Info.html
+++ b/Payment_Info.html
@@ -10,6 +10,51 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container-fluid justify-content-end ">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+        </a>
+        <div class="flex-grow-1"></div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+            <li class="nav-item">
+              <a class="nav-link text-white "  href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="trading.html">Trading</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="pricing.html">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="Team page.html"> Team Members </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="echosubscription.html"> Subscription</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="Contact_Page.html"> Contact</a>
+            </li>
+          </ul>
+        </div>
+        <a class="btn btn-outline-primary" aria-current="page" href="sign-up.html">Sign Up</a>
+  
+        <div>
+          <a class="btn " aria-current="page" href="Payment_Info.html"><img src="images/cart-148964_1280.png" alt="Logo"
+              width="30" class="d-inline-block align-text-top"></a>
+        </div>
+      </div>
+  
+  
+    </nav>
     <h1  class="text-center">Add Credit Or Debit Card</h1>
     <form method="post" class="px-3 mb-3">
         <div class="col-sm-2 wow animate__fadeInDown mx-auto">
