--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
 </head>
 <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -30,19 +31,19 @@
                 <a class="nav-link text-white "  href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="trading.html">Trading</a>
+                <a class="nav-link disabled" href="trading.html">Trading</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="pricing.html">Pricing</a>
+                <a class="nav-link disabled" href="pricing.html">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="faq.html"> F.A.Q. </a>
+                <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="Team page.html"> Team Members </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="echosubscription.html"> Subscription</a>
+                <a class="nav-link disabled" href="echosubscription.html"> Subscription</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="Contact_Page.html"> Contact</a>
@@ -52,7 +53,7 @@
           <a class="btn btn-outline-primary" aria-current="page" href="sign-up.html">Sign Up</a>
     
           <div>
-            <a class="btn " aria-current="page" href="price.html"><img src="images/cart-148964_1280.png" alt="Logo"
+            <a class="btn " aria-current="page" href="Payment_Info.html"><img src="images/cart-148964_1280.png" alt="Logo"
                 width="30" class="d-inline-block align-text-top"></a>
           </div>
         </div>
@@ -61,7 +62,7 @@
       </nav>
 
 
-<p  class="text-secondary display-4 text-center fw-bold" style="text-indent: vw;">Find Your Perfect Match</p>
+<p  class="text-secondary display-4 text-center mx-auto p-2">Find Your Perfect Match</p>
 
 
 
