--- a/sign-up.html
+++ b/sign-up.html
@@ -29,35 +29,35 @@
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="navbar-collapse" id="navbarSupportedContent">
+      <div class="navbar-collapse collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
           <li class="nav-item">
             <a class="nav-link text-white "  href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="trading.html">Trading</a>
+            <a class="nav-link disabled" href="trading.html">Trading</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="pricing.html">Pricing</a>
+            <a class="nav-link disabled" href="pricing.html">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="faq.html"> F.A.Q. </a>
+            <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="team.html"> Team Members </a>
+            <a class="nav-link text-white" href="Team page.html"> Team Members </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="subscription.html"> Subscription</a>
+            <a class="nav-link disabled" href="echosubscription.html"> Subscription</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="contact.html"> Contact</a>
+            <a class="nav-link text-white" href="Contact_Page.html"> Contact</a>
           </li>
         </ul>
       </div>
       <a class="btn btn-outline-primary" aria-current="page" href="sign-up.html">Sign Up</a>
 
       <div>
-        <a class="btn " aria-current="page" href="price.html"><img src="images/cart-148964_1280.png" alt="Logo"
+        <a class="btn " aria-current="page" href="Payment_Info.html"><img src="images/cart-148964_1280.png" alt="Logo"
             width="30" class="d-inline-block align-text-top"></a>
       </div>
     </div>
