--- a/index.html
+++ b/index.html
@@ -62,10 +62,19 @@
       </nav>
 
 
-<p  class="text-secondary display-4 text-center mx-auto p-2">Find Your Perfect Match</p>
+<p  class="text-secondary font-size-large text-center mx-auto p-2">Find Your Perfect Match</p>
 
 
+<div class="d-flex flex-row-reverse"><a class="btn btn-outline-light disabled " aria-current="page" href="#">Shopping</a></div>
+<br><br><br><br><br><br>
+<p  class="text-secondary font-s  text-center mx-auto p-2 font-size-mid">Testimonial</p>
 
+<ol class="text-secondary ">
+<li><p class="text-white font-size-small">David L.: "I was hesitant to spend money on another [type of product], but after seeing the results firsthand, I'm kicking myself for not trying it sooner. It's worth every penny!"</p></li>
+<li><p class="text-white font-size-small">Michael S.: "I've been struggling with [problem] for years, but ever since I started using this service, everything has turned around for me. I can't recommend it enough!"</p></li>
+<li><p class="text-white font-size-small">Emily R.: "I've tried countless solutions, but nothing worked until I found this product. It's like a miracle in a bottle. I've never felt better!"</p></li>
+<li><p class="text-white font-size-small">David L.: "I was hesitant to spend money on another [type of product], but after seeing the results firsthand, I'm kicking myself for not trying it sooner. It's worth every penny!"</p></li>
+</ol>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
