--- a/echosubscription.html
+++ b/echosubscription.html
@@ -8,30 +8,54 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">EchoTradez</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Help Center</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Chat</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container-fluid justify-content-end ">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+        </a>
+        <div class="flex-grow-1"></div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+            <li class="nav-item">
+              <a class="nav-link text-white "  href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="shopping.html">Shopping</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="trading.html">Trading</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="pricing.html">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="Team page.html"> Team Members </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="echosubscription.html"> Subscription</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="Contact_Page.html"> Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+        <a class="btn btn-outline-primary" aria-current="page" href="sign-up.html">Sign Up</a>
+  
+        <div>
+          <a class="btn " aria-current="page" href="Payment_Info.html"><img src="images/cart-148964_1280.png" alt="Logo"
+              width="30" class="d-inline-block align-text-top"></a>
+        </div>
+      </div>
+  
+  
+    </nav>
 
       <br>
       <br>
