--- a/shopping.html
+++ b/shopping.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Echo Tradez Shopping</title>
-    <link href="bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="bootstrap.css" rel="stylesheet">
   </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -75,11 +75,12 @@
                 </div>
             </div>
             <div class="card border-secondary mb-3 mx-4 col-md-2" style="width: 18rem;">
-                <br><br><br>
+                <br><br><p class="h4  text-center">FitBeast</p><br>
+                
                 <img src="images/fiberbeat.png" class="card-img-top" alt="image of Grip Strengthener kit of 5">
                 <br><br><br>
                 <div class="card-body">
-                    <p class="card-text text-center">FitBeast Grip Strengthener Forearm Strengthener Hand Grips Strengthener Kit - 5 Pack Adjustable Resistance.
+                    <p class="card-text text-center">Grip Strengthener Forearm Strengthener Hand Grips Strengthener Kit - 5 Pack Adjustable Resistance.
                         <h5 class="text-center">$25.99</h5></p>
                 </div>
             </div>
