--- a/Team page.html
+++ b/Team page.html
@@ -55,7 +55,7 @@
         <img src="images/Logan.JPG" class="card-img-top" alt="logan">
         <div class="card-body">
           <h5 class="card-title">Logan Vergara (CEO)</h5>
-          <p class="card-text">I am a 11th grader or junior in high school, going to school at the Brooklyn Steam
+          <p class="card-text overflow-scroll" style="height: 100px;">I am a 11th grader or junior in high school, going to school at the Brooklyn Steam
             Center, located in the Brooklyn Navy Yard in downtown Brooklyn. I enojy various activites such as sports and
             video games. I am currently expanding my expertiese in Fullstack Development and am now HTML and CSS
             certified. I am an overall pretty social person and enjoy passing time with friends, whether it may be
@@ -107,7 +107,7 @@
         <img src="images/jayden.png" class="card-img-top" alt="Jayden">
         <div class="card-body">
           <h5 class="card-title text-center"> Jayden Baird (?)</h5>
-          <p class="card-text">I am a student at George Westinghouse HighSchool and I am going to a new ingenious
+          <p class="card-text overflow-scroll" style="height:100px;">I am a student at George Westinghouse HighSchool and I am going to a new ingenious
             afterschool program called the Brooklyn Steam where where we learn about real life things like coding,
             construction, cooking, and more.</p>
 
