Home page completed

--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -28,7 +28,6 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="shopping.html">Shopping</a>
             </li>
-         
             <li class="nav-item">
               <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
             </li>
@@ -114,7 +113,7 @@
         
         <div>
           <a href="" class="me-4 text-reset">
-            <sv class="fab fa-facebook-f"></i>
+            <i class="fab fa-facebook-f"></i>
           </a>
           <a href="" class="me-4 text-reset">
             <i class="fab fa-twitter"></i>
