--- a/Payment_Info.html
+++ b/Payment_Info.html
@@ -106,7 +106,7 @@
         
         <div>
           <a href="" class="me-4 text-reset">
-            <sv class="fab fa-facebook-f"></i>
+            <i class="fab fa-facebook-f"></i>
           </a>
           <a href="" class="me-4 text-reset">
             <i class="fab fa-twitter"></i>
