--- a/shopping.html
+++ b/shopping.html
@@ -55,14 +55,16 @@
             <div class="card border-primary mb-3 mx-4 col-md-2" style="width: 18rem;">
                 <img src="images/portable_charger.png" class="card-img-top" alt="A image of a portable charger with a pawprint that glows blue in the top corner">
                 <div class="card-body">
-                    <p class="card-text text-center">INIU Portable Charger, Slimmest 10000mAh 5V/3A Power Bank, USB C in&Out High-Speed Charging Battery Pack, External 
-                        Phone Powerbank Compatible with iPhone 15 14 13 12 X Samsung S22 S21 Google iPad etc. <br><h5 class="text-center">$17.99</h5></p>
+                    <p class="card-text text-center">INIU Portable Charger, Slimmest 10000mAh 5V/3A Power Bank, USB C 
+                      in&Out High-Speed Charging Battery Pack, External Phone Powerbank Compatible with iPhone 15 14 13 12 X Samsung S22 S21 
+                      Google iPad etc. <br><h5 class="text-center">$17.99</h5></p>
                 </div>
             </div>
             <div class="card border-secondary mb-3 mx-4 col-md-2" style="width: 18rem;">
                 <img src="images/Firestick.png" class="card-img-top" alt="An amazon firestick for streaming">
                 <div class="card-body">
-                    <p class="card-text text-center">Amazon Fire TV Stick, HD, sharp picture quality, fast streaming, free & live TV, Alexa Voice Remote with TV controls.
+                    <p class="card-text text-center">Amazon Fire TV Stick, HD, sharp picture quality, fast streaming, free &amp; live TV, 
+                      Alexa Voice Remote with TV controls.
                         <br><h5 class="text-center">$39.99</h5></p>
                 </div>
             </div>
@@ -79,7 +81,8 @@
                 <img src="images/fiberbeat.png" class="card-img-top" alt="image of Grip Strengthener kit of 5">
                 <br><br><br>
                 <div class="card-body">
-                    <p class="card-text text-center">FitBeast Grip Strengthener Forearm Strengthener Hand Grips Strengthener Kit - 5 Pack Adjustable Resistance.
+                    <p class="card-text text-center">FitBeast Grip Strengthener Forearm Strengthener Hand Grips Strengthener Kit - 5 Pack 
+                      Adjustable Resistance.
                         <h5 class="text-center">$25.99</h5></p>
                 </div>
             </div>
@@ -88,7 +91,8 @@
                 <img src="images/playdoh.png" class="card-img-top" alt="an image of a multicolored pyramid of playdoh containers">
                 <br><br>
                 <div class="card-body">
-                    <p class="card-text text-center">Play-Doh Modeling Compound 10-Pack Case of Colors, Non-Toxic, Assorted, 2 oz. Cans, Multicolor, Ages 2 and Up.
+                    <p class="card-text text-center">Play-Doh Modeling Compound 10-Pack Case of Colors, Non-Toxic, Assorted, 2 oz. Cans, 
+                      Multicolor, Ages 2 and Up.
                         <h5 class="text-center">$7.99</h5></p>
                 </div>
             </div>
@@ -99,7 +103,8 @@
                 <br>
                 <img src="images/Sparkling_ice.png" class="card-img-top" alt="Sparkling ice Beverage black rasberry flavor">
                 <div class="card-body">
-                    <p class="card-text text-center">Sparkling Ice, Black Raspberry Sparkling Water, Zero Sugar Flavored Water, with Vitamins and Antioxidants, Low Calorie Beverage, 
+                    <p class="card-text text-center">Sparkling Ice, Black Raspberry Sparkling Water, Zero Sugar Flavored Water, 
+                      with Vitamins and Antioxidants, Low Calorie Beverage, 
                         17 fl oz Bottles (Pack of 12).<h5 class="text-center">$10.99</h5></p>
                 </div>
             </div>
@@ -107,7 +112,7 @@
                 <img src="images/Backbone.png" class="card-img-top" alt="The brand new playstation handheld console the BACKBONE">
                 <div class="card-body">
                     <p class="card-text text-center">BACKBONE One Mobile Gaming Controller for Android and iPhone 15 Series (USB-C) - PlayStation Edition -
-                         2nd Gen - Turn Your Phone into a Gaming Console- Play PlayStation, Xbox, Call of Duty & More.<h5 class="text-center">$99.99</h5></p>
+                         2nd Gen - Turn Your Phone into a Gaming Console- Play PlayStation, Xbox, Call of Duty &amp; More.<h5 class="text-center">$99.99</h5></p>
                 </div>
             </div>
             <div class="card border-secondary mb-3 mx-4 col-md-2" style="width: 18rem;">
@@ -143,7 +148,7 @@
           </div>          
           <div>
             <a href="" class="me-4 text-reset">
-              <sv class="fab fa-facebook-f"></i>
+              <i class="fab fa-facebook-f"></i>
             </a>
             <a href="" class="me-4 text-reset">
               <i class="fab fa-twitter"></i>
@@ -212,7 +217,8 @@
           <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
         </div> 
       </footer>      
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <script>
         var wow = new WOW({
