--- a/echosubscription.html
+++ b/echosubscription.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Echo Premium-Plus</title>
-    <link href="bootstrap.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="bootstrap.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -183,7 +183,7 @@
       
       <div>
         <a href="" class="me-4 text-reset">
-          <sv class="fab fa-facebook-f"></i>
+          <i class="fab fa-facebook-f"></i>
         </a>
         <a href="" class="me-4 text-reset">
           <i class="fab fa-twitter"></i>
