--- a/faqpage.html
+++ b/faqpage.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>F.A.Q Page</title>
-    <link href="bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/footers/footer-6/assets/css/footer-6.css">
+    <link href="bootstrap.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -140,7 +140,7 @@
             Delete my Account 
           </button>
         </h2>
-        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
           <div class="accordion-body"> <p>Here's how you can delete your Account/deactivate your Premium(+) Subscription.  <code> </code> </p></div>
         </div>
       </div>
@@ -164,7 +164,7 @@
         
         <div>
           <a href="" class="me-4 text-reset">
-            <sv class="fab fa-facebook-f"></i>
+            <i class="fab fa-facebook-f"></i>
           </a>
           <a href="" class="me-4 text-reset">
             <i class="fab fa-twitter"></i>
