--- a/shopping.html
+++ b/shopping.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-transparent">
         <div class="container-fluid justify-content-end ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+            <img src="images/Logo Transparent.png" alt="Logo" width="90" class="d-inline-block align-text-top">
           </a>
           <div class="flex-grow-1"></div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -23,13 +23,13 @@
           <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link text-white "  href="index.html">Home</a>
+                <a class="nav-link text-white border-bottom border-primary"  href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="shopping.html">Shopping</a>
+                <a class="nav-link text-white border-bottom border-primary" href="shopping.html">Shopping</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
+                <a class="nav-link text-white border-bottom border-primary" href="faqpage.html"> F.A.Q. </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="Team page.html"> Team Members </a>
@@ -49,7 +49,7 @@
           </div>
         </div>
       </nav>
-      <h1 class="text-center">Shopping</h1>
+      <h1 class="text-center text-primary">Shopping</h1>
       <br>
       <div class="row">
             <div class="card border-primary mb-3 mx-4 col-md-2" style="width: 18rem;">
