--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link href="index.css" rel="stylesheet">
 </head>
 <body class="bg-dark">
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-transparent">
         <div class="container-fluid justify-content-end ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+            <img src="images/Logo Transparent.png" alt="Logo" width="90" class="d-inline-block align-text-top">
           </a>
           <div class="flex-grow-1"></div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -28,23 +28,23 @@
           <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link text-white "  href="index.html">Home</a>
+                <a class="nav-link text-white border-bottom border-primary"  href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="shopping.html">Shopping</a>
+                <a class="nav-link text-white border-buttom border-primary"  href="shopping.html">Shopping</a>
               </li>
               <li class="nav-item">
               <li class="nav-item">
-                <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
+                <a class="nav-link text-white border-bottom border-primary" href="faqpage.html"> F.A.Q. </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="Team page.html"> Team Members </a>
+                <a class="nav-link text-white border-bottom border-primary" href="Team page.html"> Team Members </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="echosubscription.html"> Subscription</a>
+                <a class="nav-link text-white border-bottom border-primary" href="echosubscription.html"> Subscription</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="Contact_Page.html"> Contact</a>
+                <a class="nav-link text-white border-bottom border-primary" href="Contact_Page.html"> Contact</a>
               </li>
             </ul>
           </div>
