--- a/Team page.html
+++ b/Team page.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Team members</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link href="bootstrap.css" rel="stylesheet.css">
+  <link href="bootstrap.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -16,7 +16,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-transparent">
     <div class="container-fluid justify-content-end ">
       <a class="navbar-brand" href="index.html">
         <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
@@ -60,17 +60,17 @@
 
   </nav>
 
-  <h1 class="text-center">Team page</h1>
+  <h1 class="text-center text-primary">Team page</h1>
   <br>
   <div class="row">
 
     <div class="col col-12 col-6 col-lg-3">
 
-      <div class="card h-100">
+      <div class="card bg-transparent border-none text-primary">
         <img src="images/Logan.JPG" class="card-img-top" alt="logan">
-        <div class="card-body">
+        <div class="card-body ">
           <h5 class="card-title">Logan Vergara (Chief Executive Officer)</h5>
-          <p class="card-text">I am a 11th grader or junior in high school, going to school at the Brooklyn Steam
+          <p class="card-text overflow-scroll " style="height: 100px;">I am a 11th grader or junior in high school, going to school at the Brooklyn Steam
             Center, located in the Brooklyn Navy Yard in downtown Brooklyn. I enojy various activites such as sports and
             video games. I am currently expanding my expertiese in Fullstack Development and am now HTML and CSS
             certified. I am an overall pretty social person and enjoy passing time with friends, whether it may be
@@ -82,11 +82,11 @@
     </div>
     <div class="col col-12 col-6 col-lg-3">
 
-      <div class="card">
+      <div class="card bg-transparent text-primary">
         <img src="images/santi.jpg" class="card-img-top" alt="santi">
         <div class="card-body">
           <h5 class="card-title text-center">Santiago Cardenas (Chief Operating Officer)</h5>
-          <p class="card-text overflow-scroll" style="height: 131px;">Hi my name is santiago and i like to cook and
+          <p class="card-text overflow-scroll" style="height: 100px;">Hi my name is santiago and i like to cook and
             clean and work my homework (wink Wink😉)
             and im very social i would talk to anyone in this class and i wont get mad because thats how nice i am.
             Y’all should be gratefull frs and that is it for now i dont think ill be upating this so this will be all
@@ -104,7 +104,7 @@
     </div>
 
     <div class="col col-12 col-6 col-lg-3">
-      <div class="card">
+      <div class="card bg-transparent text-primary">
         <img src="images/arian.png" class="card-img-top" alt="arion">
         <div class="card-body">
           <h5 class="card-title text-center">Arion John (Chief Assistant Officer)</h5>
@@ -118,11 +118,11 @@
     </div>
 
     <div class="col col-12 col-6 col-lg-3">
-      <div class="card">
+      <div class="card bg-transparent text-primary">
         <img src="images/jayden.png" class="card-img-top" alt="Jayden">
         <div class="card-body">
          <h5 class="card-title text-center"> Jayden Baird (Chief Designer Officer)</h5>
-          <p class="card-text">Hi, I am a student at George Westinghouse HighSchool and I am going to a new ingenious
+          <p class="card-text overflow-scroll" style="height: 100px;"> Hi, I am a student at George Westinghouse HighSchool and I am going to a new ingenious
             afterschool program called the Brooklyn Steam where where we learn about real life things like coding,
             construction, cooking, and more.</p>
 
@@ -136,13 +136,13 @@
    
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
    
-      <div class="me-5 d-none d-lg-block">
+      <div class="me-5  d-lg-block ">
         <span>Get connected with us on social networks:</span>
       </div>
       
       <div>
         <a href="" class="me-4 text-reset">
-          <sv class="fab fa-facebook-f"></i>
+          <i class="fab fa-facebook-f"></i>
         </a>
         <a href="" class="me-4 text-reset">
           <i class="fab fa-twitter"></i>
