--- a/sign-up.html
+++ b/sign-up.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="bg-light">
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-transparent">
     <div class="container-fluid justify-content-end ">
       <a class="navbar-brand" href="index.html">
         <img src="images/Logo Transparent.png" alt="Logo" width="50" class="d-inline-block align-text-top">
