our socials added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link text-white "  href="index.html">Home</a>
+                <a class="nav-link text-white"  href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="shopping.html">Shopping</a>
@@ -90,24 +90,38 @@
       <span>Get connected with us on social networks:</span>
     </div>
     <div>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
-      </a>
+      <div class="">
+        <a href="https://www.linkedin.com/in/arion-john-0a949b2ba/" class=" me-4 text-reset">
+          <i class="fab fa-linkedin">Arion's LinkedIn</i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-github">&amp; Github</i>
+        </a>
+    </div>
+    <div class="">
+        <a href="https://www.linkedin.com/in/santiago-cardenas-8381082a5/" class=" me-4 text-reset">
+          <i class="fab fa-linkedin">Santiago's LinkedIn</i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-github">&amp; Github</i>
+        </a>
+    </div>
+    <div class="">
+        <a href="https://www.linkedin.com/in/logan-vergara-55a7502b8/" class=" me-4 text-reset">
+          <i class="fab fa-linkedin">Logan's LinkedIn</i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-github">&amp; Github</i>
+        </a>
+    </div>
+    <div class="">
+        <a href="https://www.linkedin.com/in/jayden-baird-593781256/" class=" me-4 text-reset">
+          <i class="fab fa-linkedin">Jayden's LinkedIn</i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-github">&amp; Github</i>
+        </a>
+    </div>
     </div>
   </section>  
   <section class="">
