Added everyone's linkedin and github to footers and added underline to bootstrap.css

--- a/Payment_Info.html
+++ b/Payment_Info.html
@@ -105,25 +105,31 @@
         </div>
         
         <div>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-facebook-f"></i>
+          <a target="_blank" href="https://www.linkedin.com/in/arion-john-0a949b2ba/" class=" me-4 text-reset">
+            <i class="fab fa-linkedin">Arion's LinkedIn</i>
           </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" href="https://github.com/ajohn-2" class="mr-3 text-reset">
+            <i class="fab fa-github">&amp; Github</i>
           </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-google"></i>
+          <a target="_blank" href="https://www.linkedin.com/in/santiago-cardenas-8381082a5/" class=" me-4 text-reset">
+            <i class="fab fa-linkedin">Santiago's LinkedIn</i>
           </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-instagram"></i>
+          <a href="https://github.com/lawandorder4" class="mr-3 text-reset">
+            <i class="fab fa-github">&amp; Github</i>
           </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-linkedin"></i>
+          <a target="_blank" href="https://www.linkedin.com/in/logan-vergara-55a7502b8/" class=" me-4 text-reset">
+            <i class="fab fa-linkedin">Logan's LinkedIn</i>
           </a>
-          <a href="" class="me-4 text-reset">
-            <i class="fab fa-github"></i>
+          <a target="_blank" href="https://github.com/Rgjmerc" class="mr-3 text-reset">
+            <i class="fab fa-github">&amp; Github</i>
           </a>
-        </div>
+          <a target="_blank" href="https://www.linkedin.com/in/jayden-baird-593781256/" class=" me-4 text-reset">
+            <i class="fab fa-linkedin">Jayden's LinkedIn</i>
+          </a>
+          <a target="_blank" href="https://github.com/JaydenBaird" class="mr-3 text-reset">
+            <i class="fab fa-github">&amp; Github</i>
+          </a>
+      </div>
       </section>
       
       <section class="">
