--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
           </div>
         </div>
       </nav>
-<p  class="display-1 text-center mx-auto p-2 font-weight-normal"><span class="text-secondary"> Cop </span> &amp; <span class="text-primary">Swap</span></p>
+<p  class="display-1 text-center mx-auto p-2 font-weight-normal"><span class="text-secondary text-decoration-underline"> Cop </span> &amp; <span class="text-primary text-decoration-underline">Swap</span></p>
 <br><br><br>
 <div class="col-2 mx-auto">
-  <a class="btn btn-secondary btn-lg px-5 py-3 text-se" aria-current="page" href="sign-up.html"><span class="text-warning">Get Started</span></a>
+  <a class="btn btn-secondary btn-lg px-5 py-3" aria-current="page" href="sign-up.html"><span class="text-warning">Get Started</span></a>
 </div>
 <br><br><br><br>
 <p class="display-3 text-center text-secondary font-size-mid">Our Mission</p>
@@ -69,20 +69,20 @@
 <p class="font-size-small text-center">We are a company that noticed the fact that there are no trading and shopping websites. 
   So with this newfound knowledge we took it upon ourselves to make that into a reality. This website is the result. 
   Here you can purchase items from providers, or trade items with other users. You have the freedom with no limits. 
-  Here you can <a href="shopping.html"><span class="text-secondary">Cop</span></a> &amp; 
-  <a href="tradingpage.html"><span class="text-primary">Swap</span></a>.</p>
+  Here you can <a href="shopping.html"><span class="text-secondary text-decoration-underline">Cop</span></a> &amp; 
+  <a href="tradingpage.html"><span class="text-primary text-decoration-underline">Swap</span></a>.</p>
 <br><br>
 <p  class="text-secondary text-center display-3 font-size-mid">Testimonial</p>
 <br><br>
 <ol class="font-size-small">
-<li><p>David L.: "I was hesitant to spend money on another [type of product], but after seeing 
+<li><p><span class="text-primary text-decoration-underline">David L</span>: "I was hesitant to spend money on another [type of product], but after seeing 
   the results firsthand, I'm kicking myself for not trying it sooner. It's worth every penny!"</p></li>
-<li><p>Michael S.: "I've been struggling with [problem] for years, 
+<li><p><span class="text-secondary text-decoration-underline">Michael S</span>: "I've been struggling with [problem] for years, 
   but ever since I started using this service, everything has turned around for me. I can't recommend it enough!"</p></li>
-<li><p>Emily R.: "I've tried countless solutions, but nothing worked until I found this product. 
+<li><p><span class="text-primary text-decoration-underline">Emily R</span>: "I've tried countless solutions, but nothing worked until I found this product. 
   It's like a miracle in a bottle. I've never felt better!"</p></li>
-<li><p>David L.: "I was hesitant to spend money on another [type of product], 
-  but after seeing the results firsthand, I'm kicking myself for not trying it sooner. It's worth every penny!"</p></li>
+<li><p><span class="text-secondary text-decoration-underline">Daniel P</span>: "I didnt really see the point on spending so much money on [type of product], 
+  but then I found it in a trade totally awesome I recommend wholeheartedly!"</p></li>
 </ol>
 <footer class="text-center text-lg-start bg-body-tertiary text-muted">
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
@@ -90,38 +90,30 @@
       <span>Get connected with us on social networks:</span>
     </div>
     <div>
-      <div class="">
-        <a href="https://www.linkedin.com/in/arion-john-0a949b2ba/" class=" me-4 text-reset">
+        <a target="_blank" href="https://www.linkedin.com/in/arion-john-0a949b2ba/" class="me-4 text-reset">
           <i class="fab fa-linkedin">Arion's LinkedIn</i>
         </a>
-        <a href="" class="me-4 text-reset">
+        <a target="_blank" href="https://github.com/ajohn-2" class="mr-3 text-reset">
           <i class="fab fa-github">&amp; Github</i>
         </a>
-    </div>
-    <div class="">
-        <a href="https://www.linkedin.com/in/santiago-cardenas-8381082a5/" class=" me-4 text-reset">
+        <a target="_blank" href="https://www.linkedin.com/in/santiago-cardenas-8381082a5/" class=" me-4 text-reset">
           <i class="fab fa-linkedin">Santiago's LinkedIn</i>
         </a>
-        <a href="" class="me-4 text-reset">
+        <a target="_blank" href="https://github.com/lawandorder4" class="mr-3 text-reset">
           <i class="fab fa-github">&amp; Github</i>
         </a>
-    </div>
-    <div class="">
-        <a href="https://www.linkedin.com/in/logan-vergara-55a7502b8/" class=" me-4 text-reset">
+        <a target="_blank" href="https://www.linkedin.com/in/logan-vergara-55a7502b8/" class=" me-4 text-reset">
           <i class="fab fa-linkedin">Logan's LinkedIn</i>
         </a>
-        <a href="" class="me-4 text-reset">
+        <a target="_blank" href="https://github.com/Rgjmerc" class="mr-3 text-reset">
           <i class="fab fa-github">&amp; Github</i>
         </a>
-    </div>
-    <div class="">
-        <a href="https://www.linkedin.com/in/jayden-baird-593781256/" class=" me-4 text-reset">
+        <a target="_blank" href="https://www.linkedin.com/in/jayden-baird-593781256/" class=" me-4 text-reset">
           <i class="fab fa-linkedin">Jayden's LinkedIn</i>
         </a>
-        <a href="" class="me-4 text-reset">
+        <a target="_blank" href="https://github.com/JaydenBaird" class="mr-3 text-reset">
           <i class="fab fa-github">&amp; Github</i>
         </a>
-    </div>
     </div>
   </section>  
   <section class="">
