--- a/Team page.html
+++ b/Team page.html
@@ -32,7 +32,9 @@
           <li class="nav-item">
             <a class="nav-link text-white" href="shopping.html">Shopping</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link text-white" href="tradingpage.html">Trading</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
           </li>
@@ -81,7 +83,7 @@
     <div class="col col-12 col-6 col-lg-3">
 
       <div class="card">
-        <img src="images/santi.jpg" class="card-img-top" alt="santi">
+        <img src="images/santi.png" class="card-img-top" alt="santi">
         <div class="card-body">
           <h5 class="card-title text-center">Santiago Cardenas (Chief Operating Officer)</h5>
           <p class="card-text overflow-scroll" style="height: 131px;">Hi my name is santiago and i like to cook and
