--- a/faqpage.html
+++ b/faqpage.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/footers/footer-6/assets/css/footer-6.css">
     <link href="bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -27,7 +30,9 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="shopping.html">Shopping</a>
             </li>
-          
+            <li class="nav-item">
+              <a class="nav-link text-white" href="tradingpage.html">Trading</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
             </li>
@@ -162,25 +167,25 @@
           <span>Get connected with us on social networks:</span>
         </div>        
         <div>
-          <a target="_blank" href="https://www.linkedin.com/in/arion-john-0a949b2ba/" class=" me-4 text-reset">
+          <a target="_blank" href="https://www.linkedin.com/in/arion-john-0a949b2ba/" class="text-reset">
             <i class="fab fa-linkedin">Arion's LinkedIn</i>
           </a>
           <a target="_blank" href="https://github.com/ajohn-2" class="mr-3 text-reset">
             <i class="fab fa-github">&amp; Github</i>
           </a>
-          <a target="_blank" href="https://www.linkedin.com/in/santiago-cardenas-8381082a5/" class=" me-4 text-reset">
+          <a target="_blank" href="https://www.linkedin.com/in/santiago-cardenas-8381082a5/" class="text-reset">
             <i class="fab fa-linkedin">Santiago's LinkedIn</i>
           </a>
           <a target="_blank" href="https://github.com/lawandorder4" class="mr-3 text-reset">
             <i class="fab fa-github">&amp; Github</i>
           </a>
-          <a target="_blank" href="https://www.linkedin.com/in/logan-vergara-55a7502b8/" class=" me-4 text-reset">
+          <a target="_blank" href="https://www.linkedin.com/in/logan-vergara-55a7502b8/" class="text-reset">
             <i class="fab fa-linkedin">Logan's LinkedIn</i>
           </a>
           <a target="_blank" href="https://github.com/Rgjmerc" class="mr-3 text-reset">
             <i class="fab fa-github">&amp; Github</i>
           </a>
-          <a target="_blank" href="https://www.linkedin.com/in/jayden-baird-593781256/" class=" me-4 text-reset">
+          <a target="_blank" href="https://www.linkedin.com/in/jayden-baird-593781256/" class="text-reset">
             <i class="fab fa-linkedin">Jayden's LinkedIn</i>
           </a>
           <a target="_blank" href="https://github.com/JaydenBaird" class="mr-3 text-reset">
