--- a/shopping.html
+++ b/shopping.html
@@ -29,6 +29,9 @@
                 <a class="nav-link text-white" href="shopping.html">Shopping</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link text-white" href="tradingpage.html">Trading</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
               </li>
               <li class="nav-item">
@@ -49,8 +52,9 @@
           </div>
         </div>
       </nav>
-      <h1 class="text-center">Shopping</h1>
-      <br>
+      <br><br>
+      <h1 class="text-center display-1 text-primary"><span class="text-primary">S</span><span class="text-secondary">h</span><span class="text-primary">o</span><span class="text-secondary">p</span><span class="text-primary">p</span><span class="text-secondary">i</span><span class="text-primary">n</span><span class="text-secondary">g</span></h1>
+      <br><br>
       <div class="row">
             <div class="card border-primary mb-3 mx-4 col-md-2" style="width: 18rem;">
                 <img src="images/portable_charger.png" class="card-img-top" alt="A image of a portable charger with a pawprint that glows blue in the top corner">
