--- a/Payment_Info.html
+++ b/Payment_Info.html
@@ -29,6 +29,9 @@
               <a class="nav-link text-white" href="shopping.html">Shopping</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link text-white" href="tradingpage.html">Trading</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
             </li>
             <li class="nav-item">
