--- a/echosubscription.html
+++ b/echosubscription.html
@@ -6,6 +6,9 @@
     <title>Echo Premium-Plus</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -26,7 +29,9 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="shopping.html">Shopping</a>
             </li>
-           
+            <li class="nav-item">
+              <a class="nav-link text-white" href="tradingpage.html">Trading</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
             </li>
@@ -182,25 +187,25 @@
       </div>
       
       <div>
-        <a target="_blank" href="https://www.linkedin.com/in/arion-john-0a949b2ba/" class=" me-4 text-reset">
+        <a target="_blank" href="https://www.linkedin.com/in/arion-john-0a949b2ba/" class="text-reset">
           <i class="fab fa-linkedin">Arion's LinkedIn</i>
         </a>
         <a target="_blank" href="https://github.com/ajohn-2" class="mr-3 text-reset">
           <i class="fab fa-github">&amp; Github</i>
         </a>
-        <a target="_blank" href="https://www.linkedin.com/in/santiago-cardenas-8381082a5/" class=" me-4 text-reset">
+        <a target="_blank" href="https://www.linkedin.com/in/santiago-cardenas-8381082a5/" class="text-reset">
           <i class="fab fa-linkedin">Santiago's LinkedIn</i>
         </a>
         <a target="_blank" href="https://github.com/lawandorder4" class="mr-3 text-reset">
           <i class="fab fa-github">&amp; Github</i>
         </a>
-        <a target="_blank" href="https://www.linkedin.com/in/logan-vergara-55a7502b8/" class=" me-4 text-reset">
+        <a target="_blank" href="https://www.linkedin.com/in/logan-vergara-55a7502b8/" class="text-reset">
           <i class="fab fa-linkedin">Logan's LinkedIn</i>
         </a>
         <a target="_blank" href="https://github.com/Rgjmerc" class="mr-3 text-reset">
           <i class="fab fa-github">&amp; Github</i>
         </a>
-        <a target="_blank" href="https://www.linkedin.com/in/jayden-baird-593781256/" class=" me-4 text-reset">
+        <a target="_blank" href="https://www.linkedin.com/in/jayden-baird-593781256/" class="text-reset">
           <i class="fab fa-linkedin">Jayden's LinkedIn</i>
         </a>
         <a target="_blank" href="https://github.com/JaydenBaird" class="mr-3 text-reset">
