--- a/sign-up.html
+++ b/sign-up.html
@@ -34,7 +34,9 @@
           <li class="nav-item">
             <a class="nav-link text-white" href="shopping.html">Shopping</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link text-white" href="tradingpage.html">Trading</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="faqpage.html"> F.A.Q. </a>
           </li>
